ProjetoClinicaWEBAPI Implementado Repository e Serviços, falta incluir eles no Controller de cada um - Novamente

--- a/JWM.Clinic/JWM.Clinic.Repository.Entity/JWM.Clinic.Repository.Entity.csproj
+++ b/JWM.Clinic/JWM.Clinic.Repository.Entity/JWM.Clinic.Repository.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JWM.Repositories.Comum.Entity\JWM.Repositories.Comum.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
