--- a/JWM.Clinic/JWM.Services.Comum/JWM.Services.Comum.csproj
+++ b/JWM.Clinic/JWM.Services.Comum/JWM.Services.Comum.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JWM.Clinic.Models\JWM.Clinic.Models.csproj" />
+  </ItemGroup>
+
 </Project>
